feat: removing specimen via controller add: ModelMapper for growlist to growlistDTO refactor: some openAPI values which were wrongly named
